<resources>
    <string name="app_name">ChemistryTests</string>
    <string name="ONE">1</string>
    <string name="TWO">2</string>
    <string name="THREE">3</string>
    <string name="FOUR">4</string>
    <string name="FIVE">5</string>
    <string name="SUCCES_LOGGIN">Succes loggin</string>
    <string name="SIGN_OUT">Sign out</string>
    <string name="CHOSE_TEST">CHOSE TEST</string>
    <string name="COURSES">Courses</string>
    <string name="CORRECT">Correct:</string>
    <string name="YOU_ANSWER">You answer</string>
    <string name="PERIODIC_TABLE">Periodic table</string>
    <string name="CUSTOM_TEST">Custome test</string>
    <string name="CHOSE_TOPICS">Chose topics</string>
    <string name="TOTAL_QUESTIONS">Total</string>
    <string name="ZERO">0</string>
    <string name="QUESTION_TYPE">Question type:</string>
    <string name="SINGLE_CHOICE">Single choice</string>
    <string name="MULTIPLE_CHOICE">Multiple choice</string>
    <string name="INPUT_CHOICE">Inputted answer</string>
    <string name="START_TEST">Start test</string>
    <string name="LEAV_TEST">Do you want leave page?</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="SHOW_RESULT">Show result</string>
    <string name="LOG_OUT">Log out</string>
    <string name="PROFILE_SETTING">Profile settings</string>
    <string name="ASKED_QUESTIONS">Asked questions:</string>
    <string name="TOTAL_QUESTIONS_IN_TEST">Questions in Test:</string>
    <string name="CORRECT_ANSWERS">Correct answers:</string>
    <string name="SCORE">Score:</string>
    <string name="START_TEST_TIME">Start test:</string>
    <string name="TRAINING_TEST">Training test</string>
    <string name="FREE_DIRECTION">Free choice</string>
    <string name="EXAM_TEST">Exam test</string>
    <string name="DIRECT_ORDER">Direct_order</string>
    <string name="YOUR_SCORE">Your score:</string>
    <string name="TIMER_CONTROL">Timer control</string>
    <string name="COMPLETED_TESTS">Completed tests</string>
    <string name="ARE_YOU_WANT">Are you want: </string>
    <string name="REPEAT">Repeat</string>
    <string name="REPEAT_THIS_QUESTION">Repeat same questions</string>
    <string name="REMOVE">Remove test</string>
    <string name="BACKGROUND">Background</string>
    <string name="ICON">Icon</string>
    <string name="QUESTIONS">Questions</string>
    <string name="TEST_PARAMS">Settings</string>
    <string name="TEST_DESCRIPTION">Description</string>
    <string name="TEST_TITLE">Test title</string>
    <string name="AVAILABLE_TESTS">Available tests</string>
    <string name="NOT_HAVE_UPDATED_TESTS">Not have tests</string>
    <string name="LOGIN">Log in</string>
    <string name="THEORY">Theory</string>
    <string name="QUESTION_STRENGTH">Questions strength</string>
    <string name="SAVE_TEST">Save test in customs test</string>
    <string name="END_TEST_TIME">End test:</string>
    <string name="DURATION_TEST_TIME">Duration:</string>
    <string name="AVERIG_DIFFICULTY">Difficulty:</string>
    <string name="FASTER_CORRECT">Faster correct:</string>
    <string name="FASTER_WRONG">Faster wrong:</string>
    <string name="LONGER_CORRECT">Longer correct:</string>
    <string name="LONGER_WRONG">Longer wrong:</string>
    <string name="DIFFICULTY_IN_RANGE">In range</string>
    <string name="ADDITIONAL_INFORMATION">Adittional information</string>
    <string name="EXPLANATION">Explanation</string>
    <string name="HINT">Hint</string>
    <string name="SETUP_TIMER">Setup timer</string>
    <string name="DEFAULT_TIME">00:05</string>
    <string name="SELECT_TIME">Select time</string>
    <string name="STATISTICS">Statistic</string>
    <string name="HISTORY">History</string>
    <string name="CONFIGURATION">Configuration</string>
    <string name="TESTS">Tests</string>
    <string name="RESET">Reset history</string>
    <string name="HELP">Help</string>
    <string name="SOLUBILITY_CHART">Solubility chart</string>
    <string name="MOLAR_MASS_CALCULATOR">Molar mass calculator</string>
    <string name="SELECT_LANGUAGE">Select language</string>
    <string name="RESTART_APLICTION">Resturt application now</string>
    <string name="SELECT_ACCENT_COLOR">Select accent color</string>
    <string name="ACCEPT_COLOR">Acept color</string>
    <string name="PREMIUM_ACCOUNT">Premium account</string>
    <string name="SUPPORT_DEVELOPMENT">Support development</string>
    <string name="FREE_ACCOUNT">Free</string>
    <string name="PAY">Pay</string>
    <string name="SELECT_DAY_NIGHT_MODE">Select day/night mode</string>
    <string name="DAY_MODE">Day mode</string>
    <string name="NIGHT_MODE">Night mode</string>
    <string name="ACCEPT_MODE">Accept mode</string>
    <string name="FEATURE_PICTURE">Feature picture</string>
    <string name="STUDY_EVRY_WHARE">STUDY\n EVERYWHERE</string>
    <string name="LEAVE_UP_KNOLIDHE">LEAVE UP\nYOUR\nKNOWLEDGE</string>
    <string name="TRAINING_YOUR_BRAIN">TRAIN\nYOUR\nBRAIN</string>
    <string name="TARGET_FEATURE">TO REACH\nYOUR\nGOAL</string>
    <string name="MIN_READ" translatable="false">min read</string>
    <string-array name="RESULT_TAB_TITLES">
        <item>Test information</item>
        <item>General result</item>
        <item>Statistic</item>
    </string-array>
    <string-array name="QUESTIONS_STRENGTH_TYPE">
        <item>Easy</item>
        <item>Simple</item>
        <item>Normal</item>
        <item>Complex</item>
        <item>Hard</item>
    </string-array>
    <string-array name="SETTINGS_TITLE_ARRAY">
        <item>Language</item>
        <item>Accent color</item>
        <item>Theme</item>
        <item>Complex</item>
        <item>Hard</item>
    </string-array>
    <string-array name="TEST_TITLES">
        <item>Last</item>
        <item>Custom</item>
        <item>Updated</item>
        <item>Favorite</item>
    </string-array>
    <string-array name="LANGUAGE_ARRAY">
        <item>English</item>
        <item>Русский</item>
        <item>Беларуская</item>
    </string-array>
    <string-array name="NAVIGATION_MENU_ITEMS">
        <item>Tests</item>
        <item>Courses</item>
        <item>Custom test</item>
        <item>Tests history</item>
        <item>Statistic</item>
        <item>Configuration</item>
        <item>Help</item>
        <item>About</item>
        <item>Log out</item>
    </string-array>
</resources>
