<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/feature_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/FEATURE_PICTURE"/>

    <Button
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_feature_fragment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/BLOCK_PADDING"
        android:visibility="gone"
        android:text="@string/LOGIN"/>

    <TextView
        android:id="@+id/feature_description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TRAINING_YOUR_BRAIN"
        android:gravity="center"
        style="@style/BigTextStyle"
        android:shadowRadius="3"
        android:shadowDy="1"
        android:shadowDx="1"
        android:shadowColor="@color/DARK_BACKGROUND"
        android:visibility="visible"/>
</RelativeLayout>