<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/available_questions_indicator_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/BIG_TEXT_SIZE"
            android:textColor="@color/GRAY_TEXT_COLOR"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/GRAY_TEXT_COLOR"
            android:text="@string/TOTAL_QUESTIONS"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/filtered_questions_indicator_text_view"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textSize="@dimen/BIG_TEXT_SIZE"
            android:textColor="@color/BLACK_TEXT_COLOR"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/BLACK_TEXT_COLOR"
            android:text="@string/TOTAL_QUESTIONS"/>
    </LinearLayout>
    <LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical">
    <TextView
        android:id="@+id/will_ask_questions_indicator_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ZERO"
        android:textSize="@dimen/BIG_TEXT_SIZE"
        android:textColor="@color/RED_TEXT_COLOR"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/RED_TEXT_COLOR"
        android:text="@string/TOTAL_QUESTIONS"/>
</LinearLayout>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/select_topic_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CHOSE_TOPICS"/>
        <CheckBox
            android:id="@+id/fixed_tags_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QUESTION_TYPE"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/single_choice_check_box"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/SINGLE_CHOICE"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/multiple_choice_check_box"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/MULTIPLE_CHOICE"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/input_choice_check_box"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/INPUT_CHOICE"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <SeekBar
            android:padding="@dimen/BLOCK_PADDING"
            android:id="@+id/number_asked_question_seek_bar"
            android:layout_width="match_parent"
            style="@style/Base.Widget.AppCompat.SeekBar.Discrete"
            android:layout_height="30dp" />
    </LinearLayout>

    <Button
        android:layout_gravity="bottom"
        android:id="@+id/start_custom_test_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/START_TEST"/>
    <ListView
        android:id="@+id/available_questions_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:choiceMode="multipleChoice">

    </ListView>
</LinearLayout>